# log-viewer

./: CLAUDE.md  Cargo.toml  README.md  RELEASING.md  dist-workspace.toml
src/: error.rs  main.rs
src/ingestion/: mod.rs  models.rs  parser.rs  reader.rs
src/storage/: database.rs  mod.rs  schema.rs
src/storage/snapshots/: log_viewer__storage__schema__tests__generate_create_table_sql.snap  log_viewer__storage__schema__tests__generate_create_table_sql_complex.snap  log_viewer__storage__schema__tests__generate_create_table_sql_with_type_merging.snap
src/ui/: app.rs  event.rs  mod.rs  terminal.rs
src/ui/components/: debug_logs.rs  filter_panel.rs  help_menu.rs  log_detail.rs  log_list.rs  mod.rs
