[package]
name = "log-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
duckdb = { version = "1.4.2", features = ["bundled", "parquet"] }
rootcause = { version = "0.10.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jiff = "0.1"
thiserror = "2.0"

[dev-dependencies]
insta = "1.41"
