[package]
name = "log-viewer"
version = "0.1.0"
edition = "2024"
authors = ["DanSnow"]
license = "MIT"
description = "A blazingly fast terminal-based JSON log viewer with SQL-powered filtering"
repository = "https://github.com/DanSnow/log-viewer"
homepage = "https://github.com/DanSnow/log-viewer"
keywords = ["log", "viewer", "tui", "sql", "json"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
duckdb = { version = "1.4.2", features = ["bundled", "parquet"] }
rootcause = { version = "0.10.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jiff = "0.1"
thiserror = "2.0"
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-logger = { version = "0.14", features = ["tracing-support"] }

[dev-dependencies]
insta = "1.41"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
